[package]
authors = ["Kevin King <4kevinking@gmail.com>"]
name = "ssh-wire"
version = "0.1.0"

[dependencies]
base64 = "*"
byteorder = "*"
libc = "*"
rand = "*"
ring = {git = "https://github.com/kryptco/ring"}
serde = "1.0.2"
serde_derive = "1.0.2"
untrusted = "0.6"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "sshwire"

[target]

[target."cfg(target_os=\"android\")"]

[target."cfg(target_os=\"android\")".dependencies]

[target."cfg(target_os=\"android\")".dependencies.jni]
default-features = false
git = "https://github.com/prevoty/jni-rs"
